--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* --------Basic Setup-------- */
 * {
   margin: 0;
   padding: 0;
@@ -13,30 +14,14 @@ html {
   text-rendering: optimizeLegibility;
 }
 
+/* -------Reusable Components ------- */
 .row {
   max-width: 1140px;
   /* top and bottom 0 and left and right auto */
   margin: 0 auto;
 }
 
-header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(../images/hero.jpg);
-  background-size: cover;
-  background-position: center;
-  /* sets the height of the header to be 100% of the viewport height */
-  height: 100vh;
-}
-
-.hero-text-box {
-  position: absolute;
-  width: 1140px;
-  top: 50%;
-  left: 50%;
-  /* has the text stay in the center of the page */
-  transform: translate(-50%, -50%);
-}
-
+/* -------Headings------- */
 h1 {
   margin-top: 0;
   margin-bottom: 20px;
@@ -49,6 +34,7 @@ h1 {
   word-spacing: 3px;
 }
 
+/* -------Buttons------- */
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -87,4 +73,58 @@ h1 {
 .btn-ghost:hover,
 .btn-ghost:active {
   color: #fff;
+}
+
+/* -------Header------- */
+header {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+    url(../images/hero.jpg);
+  background-size: cover;
+  background-position: center;
+  /* sets the height of the header to be 100% of the viewport height */
+  height: 100vh;
+}
+
+.hero-text-box {
+  position: absolute;
+  width: 1140px;
+  top: 50%;
+  left: 50%;
+  /* has the text stay in the center of the page */
+  transform: translate(-50%, -50%);
+}
+
+.logo {
+  height: 100px;
+  width: auto;
+  float: left;
+  margin-top: 20px;
+}
+
+.main-nav {
+  float: right;
+  list-style: none;
+  margin-top: 55px;
+}
+
+.main-nav li {
+  /* lets the elements be side by side */
+  display: inline-block;
+  margin-left: 40px;
+}
+
+.main-nav li a:link,
+.main-nav li a:visited {
+  padding: 4px 0;
+  color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 90%;
+  border-bottom: 2px solid transparent;
+  transition: border-bottom 0.2s;
+}
+
+.main-nav li a:hover,
+.main-nav li a:active {
+  border-bottom: 2px solid #e67e22;
 }
