--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,10 @@ h2:after {
   margin-left: 15%;
 }
 
+.features .long-copy {
+  margin-bottom: 30px;
+}
+
 .box p {
   font-size: 90%;
   line-height: 145%;
@@ -183,4 +187,42 @@ header {
 .main-nav li a:hover,
 .main-nav li a:active {
   border-bottom: 2px solid #e67e22;
+}
+
+/* ------Meals------ */
+.meals-section {
+  padding: 0;
+}
+
+.meals-showcase {
+  list-style: none;
+  width: 100%;
+}
+
+.meals-showcase li {
+  display: block;
+  float: left;
+  width: 25%;
+}
+
+.meal-photo {
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  /* needs to have a black background when setting opacity if you want the image to be darker before hover */
+  background-color: black;
+}
+
+.meal-photo img {
+  /* makes the image exactly as wide as its container */
+  opacity: 0.7;
+  width: 100%;
+  height: auto;
+  transform: scale(1.15);
+  transition: transform 0.5s, opacity 0.5s;
+}
+
+.meal-photo img:hover {
+  transform: scale(1.03);
+  opacity: 1;
 }
