--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,6 +106,18 @@ h2:after {
   margin-bottom: 10px;
 }
 
+.icon-small {
+  display: inline-block;
+  width: 30px;
+  text-align: center;
+  color: #e67e22;
+  font-size: 130%;
+  margin-right: 10px;
+  /* secrets to align text and icons */
+  line-height: 130%;
+  vertical-align: middle;
+  margin-top: -5px;
+}
 /* -------Buttons------- */
 .btn:link,
 .btn:visited {
@@ -145,6 +157,22 @@ h2:after {
 .btn-ghost:hover,
 .btn-ghost:active {
   color: #fff;
+}
+
+/* -------Links------- */
+a:link,
+a:visited {
+  color: #e67e22;
+  text-decoration: none;
+  border-bottom: 1px solid #e67e22;
+  padding-bottom: 1px;
+  transition: border-bottom 0.2s, color 0.2s;
+}
+
+a:hover,
+a:active {
+  color: #555;
+  border-bottom: 1px solid transparent;
 }
 
 /* -------Header------- */
@@ -284,8 +312,24 @@ header {
   margin-right: 25px;
 }
 
+.btn-app:link,
+.btn-app:visited {
+  border: 0;
+}
+
 .btn-app img {
   height: 50px;
   width: auto;
   margin-right: 10px;
+}
+
+/* ------Cities------ */
+.box img {
+  width: 100%;
+  height: auto;
+  margin-bottom: 15px;
+}
+
+.city-feature {
+  margin-bottom: 5px;
 }
