--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -183,6 +183,7 @@ header {
   background-position: center;
   /* sets the height of the header to be 100% of the viewport height */
   height: 100vh;
+  background-attachment: fixed;
 }
 
 .hero-text-box {
@@ -332,4 +333,98 @@ header {
 
 .city-feature {
   margin-bottom: 5px;
+}
+
+/* -------Testimonials------ */
+.testimonials {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)),
+    url(../images/back-customers.jpg);
+  background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
+}
+
+blockquote {
+  padding: 2%;
+  font-style: italic;
+  line-height: 145%;
+  position: relative;
+  margin-top: 40px;
+}
+
+blockquote:before {
+  content: "\201C";
+  display: block;
+  font-size: 400%;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+}
+
+cite {
+  font-size: 90%;
+  margin-top: 25px;
+  display: block;
+}
+
+cite img {
+  height: 60px;
+  border-radius: 50%;
+  margin-right: 10px;
+  vertical-align: middle;
+}
+
+/* ------Plans------ */
+.plans {
+  background-color: #f4f4f4;
+}
+
+.plan-box {
+  background-color: #fff;
+  border-radius: 5px;
+  width: 90%;
+  /* half of the remaining ten percent */
+  margin-left: 5%;
+  /* first value is x, second is y, and the third is the blur, the final is the color */
+  box-shadow: 0 2px 2px rgb(133, 132, 132);
+}
+.plan-box div {
+  padding: 15px;
+  border-bottom: 1px solid rgb(240, 238, 238);
+}
+
+.plan-box div:first-child {
+  background-color: rgb(240, 240, 240);
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+}
+
+.plan-box div:last-child {
+  text-align: center;
+  border-bottom: none;
+}
+
+.plan-price {
+  font-size: 250%;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #e67e22;
+}
+
+.plan-price span {
+  /* 30% of the parent element and not the html */
+  font-size: 30%;
+  font-weight: 300;
+}
+
+.plan-price-meal {
+  font-size: 80%;
+}
+
+.plan-box ul {
+  list-style: none;
+}
+
+.plan ul li {
+  padding: 5px 0;
 }
