--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -120,7 +120,8 @@ h2:after {
 }
 /* -------Buttons------- */
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type="submit"] {
   display: inline-block;
   padding: 10px 30px;
   font-weight: 300;
@@ -132,7 +133,8 @@ h2:after {
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type="submit"] {
   background-color: #e67e22;
   color: #fff;
   margin-right: 15px;
@@ -144,7 +146,9 @@ h2:after {
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type="submit"]:hover,
+input[type="submit"]:active {
   background-color: #cf6d17;
   border: 1px solid #cf6d17;
 }
@@ -427,4 +431,34 @@ cite img {
 
 .plan ul li {
   padding: 5px 0;
+}
+
+/* ------Contact Form--------- */
+.contact-form {
+  /* this will center contact form inside of parent element */
+  width: 60%;
+  margin: 0 auto;
+}
+
+input[type="text"],
+input[type="email"],
+select,
+textarea {
+  /* fill entire column */
+  width: 100%;
+  padding: 7px;
+  border-radius: 3px;
+  border: 1px solid #ccc;
+}
+
+textarea {
+  height: 100px;
+}
+
+input[type="checkbox"] {
+  margin: 10px 5px 10px 0;
+}
+
+*:focus {
+  outline: none;
 }
