--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -462,3 +462,85 @@ input[type="checkbox"] {
 *:focus {
   outline: none;
 }
+
+/* -------Footer------- */
+footer {
+  background-color: #555;
+  padding: 50px;
+  font-size: 80%;
+}
+
+.footer-elements {
+  align-content: center;
+}
+
+.footer-nav {
+  list-style: none;
+  float: left;
+}
+
+.social-links {
+  list-style: none;
+  float: right;
+}
+
+.footer-nav li,
+.social-links li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child {
+  margin-right: 0;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited {
+  text-decoration: none;
+  border: 0;
+  color: #888;
+  transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+  color: #ddd;
+}
+
+.social-links li a:link,
+.social-links li a:visited {
+  font-size: 150%;
+}
+
+.ion-logo-facebook,
+.ion-logo-twitter,
+.ion-logo-googeplus,
+.ion-logo-instagram {
+  transition: color 0.2s;
+}
+
+.ion-logo-facebook:hover {
+  color: #3b5998;
+}
+
+.ion-logo-twitter:hover {
+  color: #1da1f2;
+}
+
+.ion-logo-googleplus:hover {
+  color: #4285f4;
+}
+
+.ion-logo-instagram:hover {
+  color: #c32aa3;
+}
+
+footer p {
+  color: #888;
+  text-align: center;
+  font-size: 90%;
+  margin-top: 20px;
+}
