--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -25,6 +25,48 @@
     width: 80%;
     margin-left: 10%;
   }
+
+  .steps-box {
+    margin-top: 10px;
+  }
+
+  .steps-box:last-child {
+    margin-top: 10px;
+  }
+
+  .works-steps {
+    margin-bottom: 40px;
+  }
+
+  .works-steps:last-of-type {
+    margin-bottom: 60px;
+  }
+
+  .app-screen {
+    width: 50%;
+  }
+
+  .icon-small {
+    width: 20px;
+    margin-right: 5px;
+  }
+
+  .city-feature {
+    font-size: 90%;
+  }
+
+  .plan-box {
+    width: 100%;
+    margin-left: 0%;
+  }
+
+  .plan-price {
+    font-size: 225%;
+  }
+
+  .contact-form {
+    width: 80%;
+  }
 }
 
 /* targets all the phones smaller than the ipad, from 481 to 767px */
