--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -43,7 +43,7 @@
   }
 
   .app-screen {
-    width: 50%;
+    width: 40%;
   }
 
   .icon-small {
@@ -71,8 +71,72 @@
 
 /* targets all the phones smaller than the ipad, from 481 to 767px */
 @media only screen and (max-width: 767px) {
+  body {
+    font-size: 16px;
+  }
+
+  section {
+    padding: 30px 0;
+  }
+
+  .row,
+  .hero-text-box {
+    padding: 0 4%;
+  }
+
+  .col {
+    width: 100%;
+    margin: 0 0 4% 0;
+  }
+
+  .main-nav {
+    display: none;
+  }
+
+  h1 {
+    font-size: 180%;
+  }
+
+  h2 {
+    font-size: 150%;
+  }
+
+  .long-copy {
+    width: 100%;
+    margin-left: 0%;
+  }
+
+  .steps-box:first-child {
+    text-align: center;
+  }
+
+  .works-steps {
+    margin-bottom: 20px;
+  }
+
+  .works-steps:last-of-type {
+    margin-bottom: 20px;
+  }
+
+  .works-step div {
+    display: inline-block;
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    padding: 4px;
+    float: left;
+    margin-right: 15px;
+    font-size: 120%;
+  }
 }
 
 /* Small phones: from 0 to 480px */
 @media only screen and (max-width: 480px) {
+  section {
+    padding: 25px 0;
+  }
+
+  .contact-form {
+    width: 100%;
+  }
 }
