--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,16 +2,19 @@
 * {
   margin: 0;
   padding: 0;
+  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-html {
+html,
+body {
   background-color: #ffffff;
   color: rgb(80, 79, 79);
   font-family: "Lato", sans-serif;
   font-size: 20px;
   font-weight: 300;
   text-rendering: optimizeLegibility;
+  overflow-x: hidden;
 }
 
 .clearfix {
@@ -129,6 +132,7 @@ input[type="submit"] {
   text-decoration: none;
   border-radius: 200px;
   border: 1px solid #e67e22;
+  -webkit-transition: background-color 0.2s, border 0.2s, color 0.2s;
   transition: background-color 0.2s, border 0.2s, color 0.2s;
 }
 
@@ -170,6 +174,7 @@ a:visited {
   text-decoration: none;
   border-bottom: 1px solid #e67e22;
   padding-bottom: 1px;
+  -webkit-transition: border-bottom 0.2s, color 0.2s;
   transition: border-bottom 0.2s, color 0.2s;
 }
 
@@ -181,6 +186,14 @@ a:active {
 
 /* -------Header------- */
 header {
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.7)),
+      to(rgba(0, 0, 0, 0.7))
+    ),
+    url(../images/hero.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(../images/hero.jpg);
   background-size: cover;
@@ -196,6 +209,7 @@ header {
   top: 50%;
   left: 50%;
   /* has the text stay in the center of the page */
+  -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
@@ -226,6 +240,7 @@ header {
   text-transform: uppercase;
   font-size: 90%;
   border-bottom: 2px solid transparent;
+  -webkit-transition: border-bottom 0.2s;
   transition: border-bottom 0.2s;
 }
 
@@ -263,11 +278,16 @@ header {
   opacity: 0.7;
   width: 100%;
   height: auto;
+  -webkit-transform: scale(1.15);
   transform: scale(1.15);
+  -webkit-transition: opacity 0.5s, -webkit-transform 0.5s;
+  transition: opacity 0.5s, -webkit-transform 0.5s;
   transition: transform 0.5s, opacity 0.5s;
+  transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
 
 .meal-photo img:hover {
+  -webkit-transform: scale(1.03);
   transform: scale(1.03);
   opacity: 1;
 }
@@ -341,6 +361,14 @@ header {
 
 /* -------Testimonials------ */
 .testimonials {
+  background-image: -webkit-gradient(
+      linear,
+      left top,
+      left bottom,
+      from(rgba(0, 0, 0, 0.801)),
+      to(rgba(0, 0, 0, 0.801))
+    ),
+    url(../images/back-customers.jpg);
   background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.801)),
     url(../images/back-customers.jpg);
   background-size: cover;
@@ -390,6 +418,7 @@ cite img {
   /* half of the remaining ten percent */
   margin-left: 5%;
   /* first value is x, second is y, and the third is the blur, the final is the color */
+  -webkit-box-shadow: 0 2px 2px rgb(133, 132, 132);
   box-shadow: 0 2px 2px rgb(133, 132, 132);
 }
 .plan-box div {
@@ -471,6 +500,7 @@ footer {
 }
 
 .footer-elements {
+  -ms-flex-line-pack: center;
   align-content: center;
 }
 
@@ -502,6 +532,7 @@ footer {
   text-decoration: none;
   border: 0;
   color: #888;
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 
@@ -519,6 +550,7 @@ footer {
 .ion-logo-twitter,
 .ion-logo-googeplus,
 .ion-logo-instagram {
+  -webkit-transition: color 0.2s;
   transition: color 0.2s;
 }
 
