--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -620,12 +620,23 @@ footer p {
 
 /* ------Animations------ */
 
-.js-wp-1 {
+.js-wp-1,
+.js-wp-2,
+.js-wp-3 {
   /* to hide on page load */
   opacity: 0;
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
+}
+
+.js-wp-4 {
+  -webkit-animation-duration: 1s;
+  animation-duration: 1s;
 }
 
 /* has the first class and the animated class at the same time */
-.js-wp-1.animated {
+.js-wp-1.animated,
+.js-wp-2.animated,
+.js-wp-3.animated {
   opacity: 1;
 }
