made mobile responsive nav bar with dropdown

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -258,6 +258,19 @@ header {
   border-bottom: 2px solid #e67e22;
 }
 
+/* Mobile Nav */
+.mobile-nav-icon {
+  float: right;
+  margin-top: 30px;
+  cursor: pointer;
+  display: none;
+}
+
+.mobile-nav-icon i {
+  font-size: 200%;
+  color: #fff;
+}
+
 /* Sticky Nav */
 .sticky {
   position: fixed;
@@ -271,9 +284,7 @@ header {
 }
 
 .sticky .main-nav {
-  float: right;
-  list-style: none;
-  margin-top: 18px;
+  margin-top: 15px;
 }
 
 .sticky .main-nav li a:link,
