--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -93,6 +93,38 @@
     display: none;
   }
 
+  .mobile-nav-icon {
+    display: inline-block;
+  }
+
+  .main-nav {
+    float: left;
+    margin-top: 25px;
+    margin-left: 25px;
+  }
+
+  .main-nav li {
+    display: block;
+  }
+
+  .main-nav li a:link,
+  .main-nav li a:visited {
+    display: block;
+    border: 0;
+    padding: 5px 0;
+    font-size: 100%;
+  }
+
+  .sticky .main-nav li a:link,
+  .sticky .main-nav li a:visited {
+    padding: 10px 0;
+    color: #555;
+  }
+
+  .sticky .mobile-nav-icon i {
+    color: #555;
+  }
+
   h1 {
     font-size: 180%;
   }
